# strbox-iot

./: .gitignore  .mxproject  README.md
.metadata/: .log4j.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: cpu.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
com/: sdkconfig
com/components/: CMakeLists.txt  buzzer.c  led.c  mqtt.c  mqtt_publish.c  mqtt_publish_state.c  mqtt_subscriber.c  mqtt_subscriber_rele2.c  structures.c  uart.c  wifi.c  wifi_scan_page.c
com/components/include/: Kconfig.projbuild  buzzer.h  led.h  mqtt.h  structures.h  uart.h  wifi.h
com/main/: main.c
com/sim/blink/: diagram.json  exemplo.c
com/tests/: check_float  check_float.c  get_tag  get_tag.c
com/tests/read_string_arduino/: read_string_arduino.ino
cpu/: .cproject  .mxproject  .project  cpu.ioc  firmware Debug.launch  firmware.ioc
cpu/Core/Inc/: adc.h  gpio.h  main.h  objects_def.h  stm32g4xx_it.h  structs.h  tim.h  uart_com.h
cpu/Core/Src/: adc.c  gpio.c  main.c  meas.c  objects_def.c  stm32g4xx_it.c  tim.c  uart_com.c  usart.c
cpu/Debug/: cpu.elf  cpu.list  cpu.map  firmware.elf  firmware.list  firmware.map  makefile  objects.list
cpu/Debug/Core/Src/: adc.su  events.d  events.su  gpio.d  gpio.su  main.d  main.su  meas.d  meas.su  (+9 more)
dashboard/flows/: flows.json
dashboard/node-red/: .flows.json.backup  flows.json
(+5 files in other folders)
